# LightRAG_plusplus

./: .coverage  .env.smp  .gitattributes  .gitignore  .pre-commit-config.yaml  .reflection_input.json  .session_friction_20260204_062421.md  .session_friction_20260204_235038.md  .session_friction_20260206_023619.md  .session_friction_20260206_181642.md  .session_friction_20260207_180511.md  .session_friction_20260207_221137.md  .session_friction_20260207_221141.md  .session_friction_20260207_221438.md  .session_friction_20260207_221447.md  .session_friction_20260207_221458.md  .session_friction_20260207_221504.md  .session_friction_20260207_221512.md  .session_friction_20260208_191352.md  .session_friction_20260208_221359.md  .session_friction_20260211_021817.md  .session_friction_20260211_040916.md  .session_friction_20260211_221346.md  .session_friction_20260212_035402.md  .session_friction_20260214_191900.md  .yamllint.yaml  AGENTS.md  AGENTS.md.bak  AGENT_INSTRUCTIONS.md  BASELINE_PERFORMANCE.md  CHANGELOG.md  CI_CD_P0_RESOLUTION_PLAYBOOK.md  DSPY_PHASE1_SUMMARY.md  DSPY_PHASE2_SUMMARY.md  Dockerfile.comparison  Dockerfile.mock  Dockerfile.openviking  Dockerfile.openviking-migration  Dockerfile.traffic-router  FINAL_PROJECT_COMPLETION_REPORT.md  (+100 more)
.agent/: .gitignore  BOOTSTRAP.md  IMPLEMENTATION_READINESS_COMPLETE.md  MULTI_PHASE_INTEGRATION_COMPLETE.md  README.md  SESSION.md  SETUP.md  friction_log_20260208_lightrag-4vcp.md  memory.md  task.md  vscode-instructions.md
.beads/: config.yaml  issues.jsonl
.claudecode/: instructions.md
.clinerules/: 01-basic.md
.github/: pull_request_template.md
.opencode/: skills
ab_testing/: README.md  advanced_dashboard.py  comprehensive_framework.py  demo_complete_framework.py  enhanced_production_test.py  load_testing_canary.py  production_ab_framework.py  production_real_test.py  realtime_monitoring.py  requirements.txt  simple_ab_framework.py  statistical_analysis.py  ultra_simple_ab_framework.py
archive/: INDEX.md
audit_results/: audit_1_5b.json  audit_3b.json  audit_7b.json  baseline_audit_report.md  debug_3b_audit_logs.json  final_yaml_baseline.json  optimized_yaml_audit.json  phase1_baseline_results.json  prompt_ab_1_5b_A.json  prompt_ab_1_5b_A_B_C.json  prompt_ab_1_5b_A_after.json  prompt_ab_1_5b_A_forced.json  prompt_ab_1_5b_B.json  prompt_ab_1_5b_C.json  prompt_ab_3b_A.json  prompt_ab_3b_A_forced.json  prompt_ab_3b_B.json  prompt_ab_3b_B_forced.json  prompt_ab_3b_C_forced.json  prompt_ab_7b_A.json  prompt_ab_7b_A_forced.json  prompt_ab_7b_B.json  prompt_ab_7b_B_forced.json  prompt_ab_7b_C_forced.json  prompt_ab_consolidated_summary.json  prompt_baseline_audit.json  real_yaml_baseline.json  refined_yaml_audit.json  smp_baseline_report.md  test_3b_audit.json
deployment/: phase3_rollout.py  traffic_router.py
docs/: ACADEMIC_BENCHMARKING.md  ACE_FRAMEWORK.md  ARCHITECTURE.md  CRITICAL_DATA_LOSS.md  EXTRACTION_VALIDATOR.md  FrontendBuildGuide.md  GRAPH_RERANKING.md  README.md  SOTA_ROADMAP.md  TESTING_SUMMARY.md  beekeeping_test_data.txt  cd-permanent-fix_analysis.md  changelog-validation-layers_analysis.md  ci-cd-prevention-guide.md  ci-failure-handler-test_analysis.md  ci-failure-simplification_analysis.md  ci-troubleshooting.md  community_detection_tradeoffs.md  fix-ci-branch-protection_analysis.md  fix-ci-cd-pipeline_analysis.md  fix-ci-logic_analysis.md  incremental_validation_architecture.md  infrastructure-fix-pr-a_analysis.md  langextract-clean_analysis.md  lightrag-1np_analysis.md  lightrag-4qs_analysis.md  lightrag-64p_analysis.md  lightrag-992-phase3_analysis.md  lightrag-akr8_implementation_summary.md  lightrag-bcak_analysis.md  lightrag-ca90_analysis.md  lightrag-cleanup_analysis.md  lightrag-ef9n_handoff.md  lightrag-ef9n_multi_phase_exemption.md  lightrag-final-sync_analysis.md  lightrag-harness-p0_analysis.md  lightrag-lml3-auto-query-mode_analysis.md  lightrag-sof3_analysis.md  ollama_intel_mac_performance.md  p0-squashed_tradeoffs.md  (+1 more)
examples/: cot_reasoning_demo.py  generate_query.py  graph_visual_with_html.py  graph_visual_with_neo4j.py  lightrag_azure_openai_demo.py  lightrag_gemini_demo.py  lightrag_gemini_postgres_demo.py  lightrag_ollama_demo.py  lightrag_openai_compatible_demo.py  lightrag_openai_demo.py  lightrag_openai_mongodb_graph_demo.py  modalprocessors_example.py  raganything_example.py  rerank_example.py
harness/: engine.py  persistence.py
lightrag/: __init__.py  ab_defaults.py  base.py  chunking.py  citation_ops.py  constants.py  core.py  entity_extraction.py  exceptions.py  highlight.py  keyword_ops.py  kw_lazy.py  langextract_integration.py  lightrag.py  namespace.py  operate.py  prompt.py  query_mode.py  rerank.py  rerank_ops.py  skill_resolver.py  utils.py  utils_graph.py
lightrag_plusplus/: __init__.py  _version.py
lightrag_webui/: .prettierrc.json  README.md  eslint.config.js  index.html  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts
monitoring/: openviking_monitor.py  quick_monitor.py
openviking/: ab_test_results_20260203_051614.json  commands.py  demo_features.py  enhanced_conversation_server.py  enhanced_server.py  mock_server.py  requirements.enhanced.txt  test_advanced_features.py
operations/: FALLBACK_ROLLBACK_PLAN.md
rag_storage_ace_regression/: graph_chunk_entity_relation.graphml  kv_store_doc_status.json  kv_store_entity_chunks.json  kv_store_full_docs.json  kv_store_full_entities.json  kv_store_full_relations.json  kv_store_llm_response_cache.json  kv_store_relation_chunks.json  kv_store_text_chunks.json  vdb_chunks.json  vdb_entities.json  vdb_relationships.json
rag_storage_ace_test/: graph_chunk_entity_relation.graphml  kv_store_doc_status.json  kv_store_entity_chunks.json  kv_store_full_docs.json  kv_store_full_entities.json  kv_store_full_relations.json  kv_store_llm_response_cache.json  kv_store_relation_chunks.json  kv_store_text_chunks.json  vdb_chunks.json  vdb_entities.json  vdb_relationships.json
rag_storage_beekeeping/: graph_chunk_entity_relation.graphml  kv_store_doc_status.json  vdb_chunks.json  (+9 more)
(+743 files in other folders)
