[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lightrag-plusplus"
dynamic = ["version"]
authors = [
    {name = "Zirui Guo"}
]
description = "LightRAG++: Simple and Fast Retrieval-Augmented Generation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "aiohttp>=3.8.0,<4.0.0",
    "configparser>=7.0.0,<8.0.0",
    "docling>=2.61.2,<3.0.0",
    "google-api-core>=2.0.0,<3.0.0",
    "google-genai>=1.0.0,<2.0.0",
    "json_repair>=0.25.0,<1.0.0",
    "nano-vectordb>=0.0.4,<1.0.0",
    "networkx>=3.0.0,<4.0.0",
    "numpy>=1.26.0,<3.0.0",
    "pandas>=2.1.0,<2.5.0",
    "pipmaster>=1.0.0,<2.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "pypinyin>=0.50.0,<1.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "setuptools>=64.0.0,<70.0.0",
    "tenacity>=8.0.0,<9.0.0",
    "tiktoken>=0.5.0,<1.0.0",
    "torch>=2.2.2,<3.0.0",
    "torchvision>=0.17.2,<1.0.0",
    "transformers>=4.30.0,<5.0.0",
    "nltk>=3.8.0,<4.0.0",
    "FlagEmbedding>=1.2.0,<2.0.0",
    "xlsxwriter>=3.1.0,<4.0.0",
    "neo4j>=6.0.2,<7.0.0",
    "ollama>=0.6.0,<1.0.0",
    "langfuse>=3.9.1,<4.0.0",
    "python-dateutil>=2.8.2",
]

[project.optional-dependencies]
# Test framework dependencies (for CI/CD and testing)
pytest = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pre-commit",
    "ruff",
]

api = [
    # Core dependencies
    "aiohttp>=3.8.0,<4.0.0",
    "configparser>=7.0.0,<8.0.0",
    "json_repair>=0.25.0,<1.0.0",
    "nano-vectordb>=0.0.4,<1.0.0",
    "networkx>=3.0.0,<4.0.0",
    "numpy>=1.26.0,<3.0.0",
    "openai>=2.0.0,<3.0.0",
    "pandas>=2.1.0,<2.5.0",
    "pipmaster>=1.0.0,<2.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "pypinyin>=0.50.0,<1.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "setuptools>=64.0.0,<70.0.0",
    "tenacity>=8.0.0,<9.0.0",
    "tiktoken>=0.5.0,<1.0.0",
    "xlsxwriter>=3.1.0,<4.0.0",
    "google-api-core>=2.0.0,<3.0.0",
    "google-genai>=1.0.0,<2.0.0",
    # API-specific dependencies
    "aiofiles>=23.0.0,<24.0.0",
    "ascii_colors>=0.4.0,<1.0.0",
    "asyncpg>=0.29.0,<1.0.0",
    "distro>=1.8.0,<2.0.0",
    "fastapi>=0.100.0,<1.0.0",
    "httpcore>=1.0.0,<2.0.0",
    "httpx>=0.28.1,<1.0.0",
    "jiter>=0.5.0,<1.0.0",
    "bcrypt>=4.0.0,<5.0.0",
    "psutil>=5.9.0,<6.0.0",
    "PyJWT>=2.8.0,<3.0.0",
    "python-jose[cryptography]>=3.3.0,<4.0.0",
    "python-multipart>=0.0.6,<1.0.0",
    "pytz>=2023.3,<2025.0",
    "uvicorn>=0.23.0,<1.0.0",
    "gunicorn>=21.0.0,<23.0.0",
    # Document processing dependencies (required for API document upload functionality)
    "openpyxl>=3.0.0,<4.0.0",      # XLSX processing
    "pycryptodome>=3.0.0,<4.0.0",  # PDF encryption support
    "pypdf>=6.1.0,<7.0.0",        # PDF processing
    "python-docx>=0.8.11,<2.0.0",  # DOCX processing
    "python-pptx>=0.6.21,<2.0.0",  # PPTX processing
]

# Advanced document processing engine (optional)
docling = [
    # On macOS, pytorch and frameworks use Objective-C are not fork-safe,
    # and not compatible to gunicorn multi-worker mode
    "docling>=2.0.0,<3.0.0; sys_platform != 'darwin'",
]

# Offline deployment dependencies (layered design for flexibility)
offline-storage = [
    # Storage backend dependencies
    "redis>=5.0.0,<8.0.0",
    "neo4j>=5.0.0,<7.0.0",
    "pymilvus>=2.6.2,<3.0.0",
    "pymongo>=4.0.0,<5.0.0",
    "asyncpg>=0.29.0,<1.0.0",
    "qdrant-client>=1.11.0,<2.0.0",
]

offline-llm = [
    # LLM provider dependencies
    "openai>=2.0.0,<3.0.0",
    "anthropic>=0.18.0,<1.0.0",
    "ollama>=0.1.0,<1.0.0",
    "zhipuai>=2.0.0,<3.0.0",
    "aioboto3>=12.0.0,<16.0.0",
    "voyageai>=0.2.0,<1.0.0",
    "llama-index>=0.9.0,<1.0.0",
    "google-api-core>=2.0.0,<3.0.0",
    "google-genai>=1.0.0,<2.0.0",
]

offline = [
    # Complete offline package (includes api for document processing, plus storage and LLM)
    "lightrag-plusplus[api,offline-storage]",
]

test = [
    "lightrag-plusplus[api,offline-storage]",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.6.1",
    "coverage[toml]>=7.0.0",
    "pgvector>=0.2.0,<1.0.0",
    "pre-commit>=3.0.0,<4.0.0",
    "ruff>=0.1.0,<1.0.0",
    "pytest-playwright>=0.4.4,<1.0.0",
    # "agent-harness>=0.1.0,<1.0.0",  # Temporarily removed due to dependency conflicts
]

evaluation = [
    "lightrag-plusplus[api]",
    "ragas>=0.3.7,<1.0.0",
    "datasets>=4.3.0,<5.0.0",
    "grounded-ai>=1.0.9,<2.0.0",
]

evaluation-slm = [
    "lightrag-plusplus[evaluation]",
    "grounded-ai>=1.0.9,<2.0.0",
    # Note: For SLM support, manually install with: pip install "grounded-ai[slm]"
    # This requires: torch, transformers, peft, flash-attn (GPU)
]

observability = [
    # LLM observability and tracing dependencies
    "langfuse>=3.8.1,<4.0.0",
]

[project.scripts]
lightrag-plusplus-server = "lightrag.api.lightrag_server:main"
lightrag-plusplus-gunicorn = "lightrag.api.run_with_gunicorn:main"
lightrag-plusplus-download-cache = "lightrag.tools.download_cache:main"
lightrag-plusplus-clean-llmqc = "lightrag.tools.clean_llm_query_cache:main"
# Backward compatibility aliases
lrag-plus-server = "lightrag.api.lightrag_server:main"
lrag-plus-gunicorn = "lightrag.api.run_with_gunicorn:main"

[project.urls]
Homepage = "https://github.com/marcdhansen/LightRAG_plusplus"
Documentation = "https://github.com/marcdhansen/LightRAG_plusplus"
Repository = "https://github.com/marcdhansen/LightRAG_plusplus"
"Bug Tracker" = "https://github.com/marcdhansen/LightRAG_plusplus/issues"

[tool.setuptools.packages.find]
include = ["lightrag*"]
exclude = ["data*", "tests*", "scripts*", "examples*", "dickens*", "reproduce*", "output_complete*", "rag_storage*", "inputs*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "lightrag_plusplus.__version__"}

[tool.setuptools.package-data]
lightrag_plusplus = ["api/webui/**/*", "api/static/**/*"]

[tool.pytest.ini_options]
    markers = [
        "unit: marks tests as unit tests (fast, isolated)",
        "api_mock: marks tests as using API mocks",
        "slow: marks tests as slow or resource intensive",
        "manual: marks tests intended for manual/interactive execution",
        "integration: marks tests requiring external services (skipped by default)",
        "offline: marks tests as offline (no external dependencies)",
        "requires_db: marks tests requiring database",
        "requires_api: marks tests requiring LightRAG API server",
        "light: marks tests that are fast and suitable for continuous runs (unit/smoke)",
        "heavy: marks tests that are slow or resource intensive (integration/stress/benchmarks)",
        "benchmark: marks tests specifically part of benchmarking suite",
        "api: marks tests for API endpoints and routes",
        "validation: marks tests for parameter validation",
        "error_handling: marks tests for error handling and edge cases",
        "performance: marks tests for performance and load testing",
        "authentication: marks tests for authentication and authorization",
        "edge_cases: marks tests for edge cases and boundary conditions",
        "ui: marks tests for UI integration testing",
        "playwright: marks tests that require Playwright browser automation",
    ]
# Enhanced test discovery and reliability
addopts = [
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "--maxfail=10",
    "-ra",
]
filterwarnings = [
    "ignore::DeprecationWarning:importlib._bootstrap",
    "ignore:builtin type swigvarlink has no __module__ attribute:DeprecationWarning",
    "ignore::UserWarning:distutils",
    "ignore::pytest.PytestConfigWarning",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py", "*_tdd.py", "*_functional.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]


[tool.ruff]
target-version = "py310"
exclude = [
    ".git",
    ".ruff_cache",
    ".vscode",
    "build",
    "dist",
    "lightrag_webui",
    "lightrag/api/webui",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
]
ignore = [
    "E402",  # module level import not at top of file
    "B008",  # do not perform function calls in argument defaults
    "C408",  # unnecessary-dict-call
    "E501",  # line too long
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG", "F841", "B006", "B904", "B007"]
"scripts/*" = ["ARG", "B904"]

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
known-first-party = ["lightrag", "lightrag_plusplus"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
[tool.uv]
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'x86_64'",
]

[tool.uv.sources]
agent-harness = { path = "../agent-harness", editable = true }

[dependency-groups]
dev = [
    "black>=26.1.0",
    "mypy>=1.19.1",
    "ruff>=0.14.6",
]
